vlib/v/checker/tests/filter_on_non_arr_err.out
vlib/v/checker/tests/filter_on_non_arr_err.vv:2:14: error: unknown method or field: `string.filter`
    1 | fn main() {
    2 |     _ := 'test'.filter(it == `t`)
      |                 ~~~~~~~~~~~~~~~~~
    3 | }
vlib/v/checker/tests/filter_on_non_arr_err.vv:2:4: error: assignment mismatch: 1 variable but `filter()` returns 0 values
    1 | fn main() {
    2 |     _ := 'test'.filter(it == `t`)
      |       ~~
    3 | }
